...
}

enum class PadButton(
    val buttonText: String,
    val expressionValue: String = buttonText,
) {
    AC("AC"),
    PlusMinus("+/-"),
    Degree("xʸ", "^"),
    Divide("÷", "/"),
    Seven("7"),
    Eight("8"),
    Nine("9"),
    Multiply("x", "*"),
...
